# mulopt

./: LICENSE.txt  README.md  pyproject.toml
src/mulopt/: __main__.py  optimizer.py
tests/: test_mulopt.py
