[project]
name = "mulopt"
version = "0.0.1"
authors = [{ name = "Adam Brzakala" }]
description = "Matrix multiplication order optimizer"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/adam-brz/mulopt"
Issues = "https://github.com/adam-brz/mulopt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mulopt"]
